--- a/6-components/_components.simple-blocks.scss
+++ b/6-components/_components.simple-blocks.scss
@@ -139,7 +139,6 @@ $nm-bg-color: $grey-gallery;
 
         a {
             text-decoration: none;
-            display: flex; // Safari (OS X) fix to ignore spacing on the end of the title
 
             .ico {
                 display: block;
@@ -185,6 +184,8 @@ $nm-bg-color: $grey-gallery;
             }
         }
     }
+
+    ul & { margin-left: .3em; }
 }
 
 .related-degree,
